--- a/src/style.css
+++ b/src/style.css
@@ -62,14 +62,6 @@ body {
   color: white;
 }
 
-.label.red {
-  background: red;
-}
-
-.label.green {
-  background: green;
-}
-
 .prices button {
   background: orange;
   border: none;
@@ -162,3 +154,105 @@ body {
   border-radius: 6px;
 }
 
+h3 {
+  color: rgb(255, 111, 0);
+}
+
+.minus-btn {
+  border: none;
+  color: white;
+  background-color: red;
+  font-size: 18px;
+  border-radius: 50%;
+  cursor: pointer;
+}
+
+.plus-btn {
+  border: none;
+  color: white;
+  background-color: green;
+  font-size: 18px;
+  border-radius: 50%;
+  cursor: pointer;
+}
+
+.remove-btn {
+  border: none;
+  color: orange;
+  background-color: white;
+  font-size: 18px;
+  border-radius: 50%;
+  cursor: pointer;
+}
+
+.login-btn {
+  background: linear-gradient(to top, orange, #f8a600);
+  border: none;
+  padding: 10px;
+  font-size: 16px;
+  font-weight: bold;
+  color: white;
+  border-radius: 5px;
+  cursor: pointer;
+}
+
+.filter {
+  background-color: transparent;
+  border: 2px solid orange;
+  border-radius: 6px;
+  padding: 8px 16px;
+  color: orange;
+  font-weight: bold;
+  transition: background-color 0.3s, color 0.3s;
+}
+
+.filter:hover {
+  background-color: orange;
+  color: white;
+  cursor: pointer;
+}
+
+.filter.active {
+  background-color: orange;
+  color: white;
+}
+.pizza-name {
+  font-weight: bold;
+  color: orange;
+  margin: 10px 0;
+}
+.sizes {
+  font-size: 14px;
+  color: #333;
+  display: flex;
+  flex-direction: column;
+  gap: 4px;
+}
+
+.sizes .icon {
+  width: 56px;
+  height: 56px;
+  vertical-align: middle;
+  margin-right: 4px;
+}
+
+.icon {
+  width: 56px; 
+  height: 56px;
+  vertical-align: middle;
+  margin-right: 4px;
+  object-fit: contain;
+}
+.pizza-image {
+  width: 200px;
+  height: 200px;
+  border-radius: 8px;
+}
+
+.label.red {
+  background: red;
+}
+
+.label.green {
+  background: green;
+}
